tests/rosetta/transpiler/Scala/conditional-structures-6.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/conditional-structures-6.scala:39: error: object BigInt is not a case class, nor does it have an unapply/unapplySeq member
      value match { case BigInt(1) => null case BigInt(2) => null case BigInt(3) => null case BigInt(4) => null }
                         ^
/workspace/mochi/tests/rosetta/transpiler/Scala/conditional-structures-6.scala:39: error: object BigInt is not a case class, nor does it have an unapply/unapplySeq member
      value match { case BigInt(1) => null case BigInt(2) => null case BigInt(3) => null case BigInt(4) => null }
                                                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/conditional-structures-6.scala:39: error: object BigInt is not a case class, nor does it have an unapply/unapplySeq member
      value match { case BigInt(1) => null case BigInt(2) => null case BigInt(3) => null case BigInt(4) => null }
                                                                       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/conditional-structures-6.scala:39: error: object BigInt is not a case class, nor does it have an unapply/unapplySeq member
      value match { case BigInt(1) => null case BigInt(2) => null case BigInt(3) => null case BigInt(4) => null }
                                                                                              ^
four errors found
